# wasm-size-test

./: Cargo.toml  justfile  readme.md  test-opt.wasm
src/: lib.rs  test1.rs  test2.rs  test3.rs  test4.rs
