[package]
name = "test-wasm-size"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = { version = "1.7.1", default_features = false, features = ["std"] }
wasm-bindgen = "0.2.83"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

[profile.release]
lto = true
